--- a/app/views/crimes/_form.html.erb
+++ b/app/views/crimes/_form.html.erb
@@ -15,6 +15,10 @@
 <%= form.label :description, "descripcion" %>
 <%= form.text_field :description %>
 </li>
+<li style="list-style: none">
+  <%= form.label :images, 'Images' %>
+  <%= form.file_field :images, multiple: true %>
+</li>
   <% if crime.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(crime.errors.count, "error") %> prohibited this crime from being saved:</h2>
