--- a/app/views/crimes/show.html.erb
+++ b/app/views/crimes/show.html.erb
@@ -62,7 +62,7 @@
 <tr>
 <%end%>
 </table>
+  <%(0...@crime.images.count).each do |image| %>
+    <%= image_tag(@crime.images[image], style:'width:50%') %>
+  <% end %>
 </div>
-<div class="col-3">
-</div>
-<div>
