agregue witness y tiene comportamiento similar a thiefs

--- a/app/views/crimes/show.html.erb
+++ b/app/views/crimes/show.html.erb
@@ -29,24 +29,33 @@
 <%@crimethief = CrimeThief.new%>
 <%@thief = Thief.new%>
 <%@victim = Victim.new%>
-<div class="card text-white bg-dark mb-3" style="margin-top:20px">
-<div class="card-header">
-<h2>Instanciar Detenido</h2></div>
-<%= render partial: 'thiefs/form', locals: {thief: @thief} %>
-</div>
-<div class="card text-white bg-dark mb-3" style="margin-top:20px">
-<div class="card-header">
-<h2>Añadir Autor</h2>
-</div>
-<%= render partial: 'crime_thiefs/form', locals: {crime_thief: @crimethief} %>
-</div>
+<%@witness = Witness.new%>
 <div class="card text-white bg-dark mb-3" style="margin-top:20px">
   <div class="card-header">
-    <h2>Añadir Victimas</h2>
+  <h2>Instanciar Detenido</h2>
   </div>
-  <%= render partial: 'victims/form', locals: {victim: @victim} %>
+  <%= render partial: 'thiefs/form', locals: {thief: @thief} %>
+</div>
+  <div class="card text-white bg-dark mb-3" style="margin-top:20px">
+  <div class="card-header">
+  <h2>Añadir Autor</h2>
+  </div>
+  <%= render partial: 'crime_thiefs/form', locals: {crime_thief: @crimethief} %>
 </div>
 </div>
+
+  <div class="card text-white bg-dark mb-3" style="margin-top:20px">
+    <div class="card-header">
+      <h2>Añadir Testigos</h2>
+    </div>
+    <%= render partial: 'witnesses/form', locals: {witness: @witness} %>
+
+    <div class="card-header">
+      <h2>Añadir Victimas</h2>
+    </div>
+    <%= render partial: 'victims/form', locals: {victim: @victim} %>
+  </div>
+  </div>
 
 <div class="col-3">
 </div></div>
