--- a/app/views/witnesses/_form.html.erb
+++ b/app/views/witnesses/_form.html.erb
@@ -1,11 +1,11 @@
 <div class="field mx-auto", style="width: 200px;">
-<%= form_with(model: victim, local: false ) do |form| %>
-  <% if victim.errors.any? %>
+<%= form_with(model: witness, local: false) do |form| %>
+  <% if witness.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(victim.errors.count, "error") %> prohibited this victim from being saved:</h2>
+      <h2><%= pluralize(witness.errors.count, "error") %> prohibited this witness from being saved:</h2>
 
       <ul>
-        <% victim.errors.full_messages.each do |message| %>
+        <% witness.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
