--- a/app/views/crimes/show.html.erb
+++ b/app/views/crimes/show.html.erb
@@ -42,6 +42,27 @@
   </div>
   <%= render partial: 'crime_thiefs/form', locals: {crime_thief: @crimethief} %>
 </div>
+
+  <div class="card text-white bg-dark mb-3" style="margin-top:20px">
+    <div class="card-header">
+      <h2>Autores</h2>
+    </div>
+    <table class="table table-striped table-dark">
+      <tr>
+        <th>#</th>
+        <th>Nombre</th>
+        <th>Accion</th>
+      <tr>
+        <% criminal_ids = CrimeThief.where(crime_id:@crime.id).pluck(:thief_id)%>
+        <% Thief.where(id:criminal_ids).each do |criminal|%>
+        <tr>
+          <td><%= criminal.name%></td>
+          <td><%= criminal.name%></td>
+          <td><%= criminal.name%></td>
+        <tr>
+      <%end%>
+    </table>
+  </div>
 </div>
 
   <div class="card text-white bg-dark mb-3" style="margin-top:20px">
@@ -57,28 +78,28 @@
   </div>
   </div>
 
-<div class="col-3">
-</div></div>
-<div class="row">
-<div class="col-3">
-</div>
-<div class="col-6">
-<h4>Autores</h4>
-<table class="table table-striped table-dark">
-<tr>
-<th>#</th>
-<th>Nombre</th>
-<th>Accion</th>
-<tr>
-<% criminal_ids = CrimeThief.where(crime_id:@crime.id).pluck(:thief_id)%>
-<% Thief.where(id:criminal_ids).each do |criminal|%>
-<tr>
-<td><%= criminal.name%></td>
-<td><%= criminal.name%></td>
-<td><%= criminal.name%></td>
-<tr>
-<%end%>
-</table>
+<!--<div class="col-3">-->
+<!--</div></div>-->
+<!--<div class="row">-->
+<!--<div class="col-3">-->
+<!--</div>-->
+<!--<div class="col-6">-->
+<!--<h4>Autores</h4>-->
+<!--<table class="table table-striped table-dark">-->
+<!--<tr>-->
+<!--<th>#</th>-->
+<!--<th>Nombre</th>-->
+<!--<th>Accion</th>-->
+<!--<tr>-->
+<%# criminal_ids = CrimeThief.where(crime_id:@crime.id).pluck(:thief_id)%>
+<%# Thief.where(id:criminal_ids).each do |criminal|%>
+<!--<tr>-->
+<!--<td><%#= criminal.name%></td>-->
+<!--<td><%#= criminal.name%></td>-->
+<!--<td><%#= criminal.name%></td>-->
+<!--<tr>-->
+<%#end%>
+<!--</table>-->
   <%(0...@crime.images.count).each do |image| %>
     <%= image_tag(@crime.images[image], style:'width:50%') %>
   <% end %>
