--- a/app/views/crimes/index.html.erb
+++ b/app/views/crimes/index.html.erb
@@ -7,7 +7,7 @@
 <table class="table table-striped table-dark">
   <thead>
     <tr>
-      <th >#</th>
+      <th >Folio</th>
       <th >Fecha</th>
       <th >Nº Involucrados</th>
       <% if signed_in? %>
@@ -20,7 +20,7 @@
   <tbody>
     <% @crimes.each do |crime| %>
       <tr>
-        <td><%= crime.title %></td>
+        <td><%= crime.id %></td>
         <td><%= crime.created_at.to_date %></td>
         <td><%= CrimeThief.where(crime_id:crime.id).count %></td>
         <% if signed_in? %>
