--- a/app/views/victims/_form.html.erb
+++ b/app/views/victims/_form.html.erb
@@ -32,8 +32,9 @@
     <%= form.text_field :detalle %>
   </div>
 
+    <br>
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Añadir Victima" %>
   </div>
 <% end %>
 </div>
