--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="http://localhost:3000/">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="http://localhost:3000/"> Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <% if signed_in? %>
