--- a/app/views/crimes/show.html.erb
+++ b/app/views/crimes/show.html.erb
@@ -32,31 +32,38 @@
 <%@witness = Witness.new%>
 <%@crimevictim = CrimeVictim.new%>
 <%@crimewitness = CrimeWitness.new%>
-<div class="card text-white bg-dark mb-3" style="margin-top:20px">
-  <div class="card-header">
-  <h2>Instanciar Detenido</h2>
-  </div>
-  <%= render partial: 'thiefs/form', locals: {thief: @thief} %>
-</div>
-  <div class="card text-white bg-dark mb-3" style="margin-top:20px">
-  <div class="card-header">
-  <h2>Añadir Autor</h2>
-  </div>
-  <%= render partial: 'crime_thiefs/form', locals: {crime_thief: @crimethief} %>
-
-  <div class="card text-white bg-dark mb-3" style="margin-top:20px">
-    <div class="card-header">
-      <h2>Añadir Victima</h2>
-    </div>
-    <%= render partial: 'crime_victims/form', locals: {crime_victim: @crimevictim} %>
-  </div>
-    <div class="card text-white bg-dark mb-3" style="margin-top:20px">
-      <div class="card-header">
-        <h2>Añadir Testigo</h2>
+  <div class="row">
+    <div class="col-4 mx-auto">
+      <div class="card text-white bg-dark mb-3" style="margin-top:20px">
+        <div class="card-header">
+          <h2>Instanciar Detenido</h2>
+        </div>
+        <div class="card-body">
+          <%= render partial: 'thiefs/form', locals: {thief: @thief} %>
+        </div>
       </div>
-      <%= render partial: 'crime_witnesses/form', locals: {crime_witness: @crimewitness} %>
     </div>
-</div>
+    <div class="col-4">
+      <div class="card text-white bg-dark mb-3" style="margin-top:20px">
+        <div class="card-header">
+          <h2>Ingresar Victima</h2>
+        </div>
+        <div class="card-body">
+          <%= render partial: 'victims/form', locals: {victim: @victim} %>
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="card text-white bg-dark mb-3" style="margin-top:20px">
+        <div class="card-header">
+          <h2>Ingresar Testigo</h2>
+        </div>
+        <div class="card-body">
+          <%= render partial: 'witnesses/form', locals: {witness: @witness} %>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="card text-white bg-dark mb-3" style="margin-top:20px">
     <div class="card-header">
@@ -120,43 +127,32 @@
       <%end%>
     </table>
   </div>
-</div>
+
+  <div class="card text-white bg-dark mb-3" style="margin-top:20px">
+  <div class="card-header">
+  <h2>Añadir Autor</h2>
+  </div>
+  <%= render partial: 'crime_thiefs/form', locals: {crime_thief: @crimethief} %>
 
   <div class="card text-white bg-dark mb-3" style="margin-top:20px">
     <div class="card-header">
-      <h2>Ingresar Testigos</h2>
+      <h2>Añadir Victima</h2>
     </div>
-    <%= render partial: 'witnesses/form', locals: {witness: @witness} %>
-    <div class="card-header">
-      <h2>Ingresar Victimas</h2>
+    <%= render partial: 'crime_victims/form', locals: {crime_victim: @crimevictim} %>
+  </div>
+    <div class="card text-white bg-dark mb-3" style="margin-top:20px">
+      <div class="card-header">
+        <h2>Añadir Testigo</h2>
+      </div>
+      <%= render partial: 'crime_witnesses/form', locals: {crime_witness: @crimewitness} %>
     </div>
-    <%= render partial: 'victims/form', locals: {victim: @victim} %>
-  </div>
+</div>
 
-  </div>
+</div>
 
-<!--<div class="col-3">-->
-<!--</div></div>-->
-<!--<div class="row">-->
-<!--<div class="col-3">-->
-<!--</div>-->
-<!--<div class="col-6">-->
-<!--<h4>Autores</h4>-->
-<!--<table class="table table-striped table-dark">-->
-<!--<tr>-->
-<!--<th>#</th>-->
-<!--<th>Nombre</th>-->
-<!--<th>Accion</th>-->
-<!--<tr>-->
-<%# criminal_ids = CrimeThief.where(crime_id:@crime.id).pluck(:thief_id)%>
-<%# Thief.where(id:criminal_ids).each do |criminal|%>
-<!--<tr>-->
-<!--<td><%#= criminal.name%></td>-->
-<!--<td><%#= criminal.name%></td>-->
-<!--<td><%#= criminal.name%></td>-->
-<!--<tr>-->
-<%#end%>
-<!--</table>-->
+</div>
+
+
   <%(0...@crime.images.count).each do |image| %>
     <%= image_tag(@crime.images[image], style:'width:50%') %>
   <% end %>
