--- a/app/views/crimes/_form.html.erb
+++ b/app/views/crimes/_form.html.erb
@@ -31,7 +31,7 @@
     </div>
   <% end %>
 
-  <div class="actions" >
+  <div class="actions" style="margin-top: 10px" >
     <%= form.submit "Crear Crimen" %>
   </div>
 <% end %>
