--- a/app/views/crimes/edit.html.erb
+++ b/app/views/crimes/edit.html.erb
@@ -1,6 +1,12 @@
+<div class="field mx-auto", style="width: 200px;">
+
 <h1>Editing Crime</h1>
 
 <%= render 'form', crime: @crime %>
-
-<%= link_to 'Show', @crime %> |
-<%= link_to 'Back', crimes_path %>
+<div class="row">
+  <div class="column mx-auto">
+    <%= link_to 'Show', @crime %> |
+    <%= link_to 'Back', crimes_path %>
+  </div>
+</div>
+</div>
