--- a/app/views/crimes/new.html.erb
+++ b/app/views/crimes/new.html.erb
@@ -1,10 +1,7 @@
-<div class="row" >
-<div  class="col-3">
-</div>
-<div  class="col-3">
-<h1>Nuevo crimen</h1>
-<%= render 'form', crime: @crime %>
-</div>
-<div  class="col-3">
-</div>
+<div class="field mx-auto", style="width: 200px;">
+
+  <h1>Nuevo crimen</h1>
+
+  <%= render 'form', crime: @crime %>
+
 </div>
