translations and corrections

--- a/app/views/crime_thiefs/_form.html.erb
+++ b/app/views/crime_thiefs/_form.html.erb
@@ -20,6 +20,6 @@
   <% end %>
 
   <div class="actions">
-    <%= form.submit "Añadir Autor del Crimen" %>
+    <%= form.submit "Añadir imputado al procedimiento" %>
   </div>
 <% end %>
