--- a/app/views/crime_witnesses/_form.html.erb
+++ b/app/views/crime_witnesses/_form.html.erb
@@ -23,7 +23,7 @@
     </div>
   <% end %>
 
-  <div class="actions">
-    <%= form.submit "Añadir testigo del crimen"%>
+  <div class="actions mx-auto" >
+    <%= form.submit "Añadir testigo al procedimiento"%>
   </div>
 <% end %>
