--- a/app/views/victims/_form.html.erb
+++ b/app/views/victims/_form.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label :name, 'Nombre' %>
     <%= form.text_field :name %>
   </div>
 
@@ -23,7 +23,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :age %>
+    <%= form.label :age, 'Edad' %>
     <%= form.number_field :age %>
   </div>
 
@@ -34,7 +34,7 @@
 
     <br>
   <div class="actions">
-    <%= form.submit "Añadir Victima" %>
+    <%= form.submit "Registrar Victima" %>
   </div>
 <% end %>
 </div>
