--- a/app/views/crime_victims/edit.html.erb
+++ b/app/views/crime_victims/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', crime_victim: @crime_victim %>
 
-<%= link_to 'Show', @crime_victim %> |
-<%= link_to 'Back', crime_victims_path %>
+<%= link_to 'Abrir', @crime_victim %> |
+<%= link_to 'Atrás', :back %>
