--- a/app/views/crime_victims/show.html.erb
+++ b/app/views/crime_victims/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_crime_victim_path(@crime_victim) %> |
-<%= link_to 'Back', crime_victims_path %>
+<%= link_to 'Editar', edit_crime_victim_path(@crime_victim) %> |
+<%= link_to 'Atrás', :back %>
