--- a/app/views/crime_witnesses/show.html.erb
+++ b/app/views/crime_witnesses/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_crime_witness_path(@crime_witness) %> |
-<%= link_to 'Back', crime_witnesses_path %>
+<%= link_to 'Editar', edit_crime_witness_path(@crime_witness) %> |
+<%= link_to 'Atrás', :back %>
