--- a/app/views/crimes/new.html.erb
+++ b/app/views/crimes/new.html.erb
@@ -1,6 +1,6 @@
 <div class="field mx-auto", style="width: 200px;">
 
-  <h1>Nuevo crimen</h1>
+  <h1>Nuevo Procedimiento</h1>
 
   <%= render 'form', crime: @crime %>
 
