--- a/app/views/victims/edit.html.erb
+++ b/app/views/victims/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', victim: @victim %>
 
-<%= link_to 'Show', @victim %> |
-<%= link_to 'Back', victims_path %>
+<%= link_to 'Abrir', @victim %> |
+<%= link_to 'Atrás', :back %>
