--- a/app/views/victims/show.html.erb
+++ b/app/views/victims/show.html.erb
@@ -20,5 +20,5 @@
   <%= @victim.detalle %>
 </p>
 
-<%= link_to 'Edit', edit_victim_path(@victim) %> |
-<%= link_to 'Back', victims_path %>
+<%= link_to 'Editar', edit_victim_path(@victim) %> |
+<%= link_to 'Atrás', :back %>
