--- a/app/views/witnesses/edit.html.erb
+++ b/app/views/witnesses/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', witness: @witness %>
 
-<%= link_to 'Show', @witness %> |
-<%= link_to 'Back', witnesses_path %>
+<%= link_to 'Abrir', @witness %> |
+<%= link_to 'Atrás', :back %>
