--- a/app/views/witnesses/show.html.erb
+++ b/app/views/witnesses/show.html.erb
@@ -20,5 +20,5 @@
   <%= @witness.detalle %>
 </p>
 
-<%= link_to 'Edit', edit_witness_path(@witness) %> |
-<%= link_to 'Back', witnesses_path %>
+<%= link_to 'Editar', edit_witness_path(@witness) %> |
+<%= link_to 'Atrás', :back %>
