--- a/app/views/crime_thiefs/edit.html.erb
+++ b/app/views/crime_thiefs/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', crime_thief: @crime_thief %>
 
-<%= link_to 'Show', @crime_thief %> |
-<%= link_to 'Back', crime_thiefs_path %>
+<%= link_to 'Abrir', @crime_thief %> |
+<%= link_to 'Atrás', :back %>
