--- a/app/views/crime_thiefs/show.html.erb
+++ b/app/views/crime_thiefs/show.html.erb
@@ -1,4 +1,4 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_crime_thief_path(@crime_thief) %> |
-<%= link_to 'Back', crime_thiefs_path %>
+<%= link_to 'Editar', edit_crime_thief_path(@crime_thief) %> |
+<%= link_to 'Atrás', :back %>
