--- a/app/views/crime_victims/_form.html.erb
+++ b/app/views/crime_victims/_form.html.erb
@@ -24,6 +24,6 @@
     </div>
   <% end %>
   <div class="actions">
-    <%= form.submit "Añadir victima al procedimiento"%>
+    <%= form.submit "Añadir víctima al procedimiento"%>
   </div>
 <% end %>
