--- a/app/views/crime_victims/new.html.erb
+++ b/app/views/crime_victims/new.html.erb
@@ -2,7 +2,7 @@
 <div class="col-3"></div>
 <div class="col-6">
 
-<h1>Añadir victima</h1>
+<h1>Añadir víctima</h1>
 
 <%= render 'form', crime_victim: @crime_victim %>
 
