--- a/app/views/crime_witnesses/edit.html.erb
+++ b/app/views/crime_witnesses/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', crime_witness: @crime_witness %>
 
-<%= link_to 'Show', @crime_witness %> |
-<%= link_to 'Back', crime_witnesses_path %>
+<%= link_to 'Abrir', @crime_witness %> |
+<%= link_to 'Atrás', :back %>
