--- a/app/views/crimes/_form.html.erb
+++ b/app/views/crimes/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: crime, local: true) do |form| %>
 <li style="list-style: none">
-<%= form.label :title, "Titulo" %>
+<%= form.label :title, "Título" %>
 <%= form.text_field :title %>
 </li>
 <li style="list-style: none">
@@ -12,15 +12,15 @@
 <%= form.text_field :place %>
 </li>
 <li style="list-style: none">
-<%= form.label :description, "descripcion" %>
+<%= form.label :description, "descripción" %>
 <%= form.text_field :description %>
 </li>
 <li style="list-style: none">
-  <%= form.label :images, 'Images' %>
+  <%= form.label :images, 'Imagenes' %>
   <%= form.file_field :images, multiple: true %>
 </li>
 <li style="list-style: none">
-  <%= form.label :files, 'Files' %>
+  <%= form.label :files, 'ARchivos' %>
   <%= form.file_field :files, multiple: true %>
 </li>
 <li style="list-style: none">
