--- a/app/views/thiefs/edit.html.erb
+++ b/app/views/thiefs/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', thief: @thief %>
 
-<%= link_to 'Show', @thief %> |
-<%= link_to 'Back', thiefs_path %>
+<%= link_to 'Abrir', @thief %> |
+<%= link_to 'Atrás', :back %>
